[tool.poetry]
name = "tik-tak-toe"
version = "0.1.0"
description = ""
authors = ["DevSlashRichie <me@slashrichie.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

